--- a/src/overette.less
+++ b/src/overette.less
@@ -11,7 +11,7 @@
 	-ms-user-select: none;
 	user-select: none; }
 
-.overette-popover, .overette-dialog {
+.overette-popover, .overette-dialog, .overette-dropdown {
 	.overette-content { 
 		position: absolute; width: 300px; background: #fff;
 		-webkit-border-radius: 5px;
@@ -64,6 +64,11 @@
 	.overette-arrow {
 		width: 30px; height: 18px; position: absolute; background: url(../images/arrow-up.png) no-repeat center; z-index: 9995;
 	}
+}
+
+.overette-dropdown {
+	.overette-content { width: 157px; box-shadow: 0 0 15px rgba(0,0,0,.3); border-color: #959595; }
+	.overette-arrow { width: 22px; height: 16px; background-image: url(../images/arrow-dropdown-up.png);}
 }
 
 /* Global Element Types */
@@ -156,4 +161,28 @@
 		}
 	}
 	button.deny { }
+
+	ul.selectable {
+		padding: 6px; margin: 0; font-size: 11px;
+		li { list-style: none; padding: 0; margin: 0; line-height: 22px; padding-left: 18px; border: 1px solid #fff; cursor: pointer; }
+		li:hover { 
+			-webkit-border-radius: 5px;
+			-moz-border-radius: 5px;
+			border-radius: 5px;
+			border: 1px solid #2155ae;
+			-webkit-box-shadow: 0px 1px 0px rgba(255,255,255,.19), inset 0px 1px 0px rgba(255, 255, 255, 0.19);
+			-moz-box-shadow:    0px 1px 0px rgba(255,255,255,.19), inset 0px 1px 0px rgba(255, 255, 255, 0.19);
+			box-shadow:         0px 1px 0px rgba(255,255,255,.19), inset 0px 1px 0px rgba(255, 255, 255, 0.19);
+			background: #79bbf3; /* Old browsers */
+			background: -moz-linear-gradient(top,  #79bbf3 0%, #4e8fd8 49%, #326fcf 52%, #3b6abe 100%); /* FF3.6+ */
+			background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#79bbf3), color-stop(49%,#4e8fd8), color-stop(52%,#326fcf), color-stop(100%,#3b6abe)); /* Chrome,Safari4+ */
+			background: -webkit-linear-gradient(top,  #79bbf3 0%,#4e8fd8 49%,#326fcf 52%,#3b6abe 100%); /* Chrome10+,Safari5.1+ */
+			background: -o-linear-gradient(top,  #79bbf3 0%,#4e8fd8 49%,#326fcf 52%,#3b6abe 100%); /* Opera 11.10+ */
+			background: -ms-linear-gradient(top,  #79bbf3 0%,#4e8fd8 49%,#326fcf 52%,#3b6abe 100%); /* IE10+ */
+			background: linear-gradient(to bottom,  #79bbf3 0%,#4e8fd8 49%,#326fcf 52%,#3b6abe 100%); /* W3C */
+			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#79bbf3', endColorstr='#3b6abe',GradientType=0 ); /* IE6-9 */
+			color: #fff;
+			text-shadow: 0 -1px 0 rgba(0,0,0,.8);
+		}
+	}
 }
